[build-system]
requires = ["setuptools>=63.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
mypy_path = "optibess_algorithm"
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
allow_redefinition = true
disable_error_code = ["assignment", "var-annotated"]