[metadata]
name = optibess_algorithm
description = Optibess Algorithm is a python 3.10+ library for simulating and optimizing a photovoltaic system with power storage.
author = Elmor Renewable Energies Dev Team
license =
license_file =
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages =
    optibess_algorithm
install_requires =
    numpy==1.24.2
    numpy-financial==1.0.0
    pandas==2.1.3
    matplotlib==3.7.1
    nevergrad==0.6.0
    timezonefinder==6.1.9
    pvlib==0.10.2
    solarfactors==1.5.3
python_requires = >=3.10
zip_safe = False

[options.extras_require]
testing =
    flake8>=6.1.0
    mypy>=1.7.0
    tox>=4.11.3

[flake8]
max-line-length = 120